--- a/QueryDeveloper_WPF.csproj
+++ b/QueryDeveloper_WPF.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.Text.Json" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Page Include="App.xaml" />
+  </ItemGroup>
+
 </Project>
